k8s/service-k8s-hello.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-hello-app
  labels:
    k8s-app: k8s-hello-app
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    k8s-app: k8s-hello-app
