k8s/ingress-k8s-hello.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    networking.gke.io/managed-certificates: apollo-io-poc
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.global-static-ip-name: apollo-ingress-static
  namespace: default
spec:
  rules:
  - host: apollo.techstrive.io
    http:
      paths:
      - path: /
        backend:
          serviceName: k8s-hello-app
          servicePort: 80
